--- a/css/estilos.css
+++ b/css/estilos.css
@@ -659,3 +659,6 @@ aside {
             color: #fff;
             transition: background-color 4.3s ease;
         }
+.whatsapp.btn {
+			margin-top: 19px;
+		}
